Change thread spawn per task to virtual threads